<resources>
    <string name="app_name">Resto</string>
    <string name="hint_name">Enter Name</string>
    <string name="hint_uname">Enter Username</string>
    <string name="hint_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="create_account">Dont have an account?Sign Up</string>
    <string name="hint_contact">Enter Contact No.</string>
    <string name="sign_up">Sign Up</string>

    <string name="no_order">Currently no running order . . .</string>

    <!-- Intro Slider -->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>


    <!--Navigation Drawer-->
    <string name="my_order">My Order</string>
    <string name="add_order">Add Order</string>
    <string name="view_menu">View Menu</string>
    <string name="feedback">Feedback</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <!-- Menu Category -->
    <string name="gujarati">Gujarati</string>
    <string name="punjabi">Punjabi</string>
    <string name="chinese">Chinese</string>
    <string name="pizza">Pizza</string>

    <!-- Menu items -->
    <string name="paneer_angara">Paneer Angara</string>
    <string name="paneer_tikka_masala">Paneer Tikka Masala</string>
    <string name="masala_bhindi">Masala Bhindi</string>

    <!--Addd Order-->
    <string name="customer_name">Customer Name</string>
    <string name="order">Order List</string>
    <string name="food_item">Food Item</string>
    <string name="food_category">Category</string>

</resources>
