<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context="com.be.msu.resto.fragment.AddOrderFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_customer_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp">


        <EditText
            android:id="@+id/edTxt_customer_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/customer_name"
            android:singleLine="true"
            android:textSize="18sp" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/txt_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout_customer_name"
        android:layout_margin="4dp"
        android:text="@string/order" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_below="@id/txt_order"
        android:elevation="4dp"
        app:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linear_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/border_spinner"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edtxt_food_item"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/food_item" />

                <EditText
                    android:id="@+id/edtxt_food_category"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:hint="@string/food_category" />

                <Button
                    android:id="@+id/btn_minus"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="@drawable/round_button"
                    android:text="-"
                    android:textColor="@android:color/white" />

                <Button
                    android:id="@+id/btn_item_count"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginBottom="56dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="@drawable/border_spinner"
                    android:text="1" />

                <Button
                    android:id="@+id/btn_plus"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:background="@drawable/round_button"
                    android:text="+"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <android.support.design.widget.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:src="@android:drawable/ic_input_add"
                app:fabSize="normal" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>
