<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_login"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="?attr/actionBarSize"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgUsername"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:src="@drawable/ic_username" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_uname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textSize="18sp">


                <EditText
                    android:id="@+id/edTxt_uname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_uname"
                    android:singleLine="true"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgPwd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="6dp"
                android:src="@drawable/ic_password" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textSize="18sp">

                <EditText
                    android:id="@+id/edTxt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:textSize="18sp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <!--
                <Spinner
                    android:id="@+id/spinner_service"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/border_spinner"
                    android:textSize="18sp" />
        -->
        <Button
            android:id="@+id/btn_signup"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:padding="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_createAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@android:color/transparent"
            android:text="@string/create_account"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>